# SIT

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .zsh_work-configs  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  install  install-deps  install-deps.sh  pyproject.toml  setup.py  setup.sh
dev/proto/: CMakeLists.txt  Makefile  json.hpp  prototype.cpp  prototype.hpp  sigutils.hpp  sigutils1.hpp  sockets.hpp  socksigs.hpp  sst_dev.cpp  sst_dev.h  sst_dev.hpp  sst_fib_lfsr.cpp  sst_fib_lfsr.hpp  sst_galois_lfsr.cpp  sst_galois_lfsr.hpp  sstscit.hpp  zmqsigs.hpp
dev/proto/blackboxes/: fib_lfsr.cpp  fib_lfsr.hpp  fib_lfsr_driver.cpp  fib_sock.cpp  fib_sock.hpp  fib_sock_driver.cpp  fib_zmq.cpp  fib_zmq.hpp  fib_zmq_driver.cpp  galois_lfsr.cpp  galois_lfsr.hpp  galois_lfsr_driver.cpp  galois_lfsr_sock.cpp  galois_lfsr_sock.hpp  galois_lfsr_sock_driver.cpp  galois_sock.cpp  galois_sock.hpp  galois_sock_driver.cpp  galois_zmq.hpp  galois_zmq_driver.cpp  socktest.cpp  socktest.hpp
dev/proto/demo/: socks.py  util.py  zmq.py
dev/proto/imodels/: sst_galois_lfsr.cpp  sst_galois_lfsr.hpp
dev/proto/include-libs/: Makefile  Makefile.local  counter.cpp  counter.h  counter_model.h
dev/proto/mods/: fib_lfsr_driver.cpp
dev/proto/modules/: fib_lfsr_driver.cpp  galois_lfsr.hpp  galois_lfsr_driver.cpp
dev/proto/scratch/: client.cpp  galois_lfsr_driver.cpp  server.cpp  sigutils1.hpp  socktest.cpp  socktest.hpp
dev/proto/socket-ipc/: CMakeLists.txt  Makefile  Makefile.sst  cprint.hpp  jsonbuf.hpp  linksysc.sh  multiclient.cpp  sigutils.hpp  sst_counter.cpp  sst_counter.h  sst_dev.cpp  sst_dev.h  sstsysc.cbp  sstsysc.hpp  sysc_counter.cpp  sysc_counter_driver.cpp  sysc_counter_tb.cpp  sysc_inverter.cpp  sysc_inverter_driver.cpp  sysc_inverter_tb.cpp
dev/proto/tests/: dev.py  sockets.py
examples/: CMakeLists.txt  Makefile
examples/boilerplate/: generate_g.py
examples/intersection/: CMakeLists.txt  Makefile  _traffic_light.cpp  bbox.py  car_generator.cpp  generate_bbox.py  intersection.cpp  intersection_bbox.py  run.py  stoplight.hpp  traffic_light.cpp  traffic_light1.cpp  traffic_light_fsm.hpp
examples/intersection/blackboxes/: stoplight.cpp  stoplight_driver.cpp  stoplight_sock_driver.cpp  test_driver.cpp  traffic_light_fsm.cpp  traffic_light_fsm_comp.cpp  traffic_light_fsm_driver.cpp  traffic_light_fsm_ports.hpp
examples/intersection/demo/: socks.py
examples/intersection/pyrtl/: pyrtl_fsm.py  run.py  traffic_light.cpp  traffic_light_driver.py  traffic_light_fsm.py  traffic_light_pyrtl.cpp
examples/intersection/pyrtl-test/: Makefile  car_generator.cpp  intersection.py  trafficLight.cpp  traffic_light.cpp
examples/intersection/systemc/: run.py  systemc_fsm.hpp  traffic_light.cpp  traffic_light_sc.hpp  traffic_light_systemc.cpp
examples/mersenne/: mt19937.v  mt19937_tb.v  ram.v
examples/monte_carlo_integration/: generate_black_boxes.py  monte_carlo.cpp  monte_carlo.hpp  mt19937.v
examples/monte_carlo_integration/pyrtl/: accumulator.py
examples/monte_carlo_integration/systemc/: sc_cacc.hpp  sc_div.hpp  sc_sumsq.hpp
examples/monte_carlo_integration/test/: estimate_pi.py  estimate_pi_plot.py  mt19937.py
examples/plague/: CMakeLists.txt  README.md  add.py  event_drivers.hpp  generate_bbox.py  plague.cpp  plague.hpp  plague_driver.cpp  plot.py  population.cpp  rng_int_driver.py  run.py  setup.hpp  stats.py  strain.cpp  strain_stats.cpp
examples/plague/chisel/: build.sbt  counters.scala  counters_driver.scala  flash_mem.scala  lol.scala  lol_driver.scala  ram.scala
examples/plague/proof/: original.py  proof.py
examples/plague/pyrtl/: add.py  mutation.py  pyrtl_driver.py  rng_int.py
examples/plague/systemc/: CMakeLists.txt  abs.hpp  ceil.hpp  min.hpp  minf.hpp  randf.hpp  reci_rand.hpp  reciprocal.hpp  rng.hpp  sc_abs.hpp  sc_ceil.hpp  sc_exp.hpp  test_driver.cpp
examples/pyrtl/: carGenerator.cc  carGenerator.h  intersection.cc  intersection.h  trafficLight.cc  trafficLight.h
examples/pyrtl/tests/: intersection.py  stopLight.py
examples/simple/: CMakeLists.txt  prototype.cpp  test-prototype.cpp
examples/simple/blackboxes/: fib_sock.cpp  fib_sock_driver.cpp  fib_zmq_driver.cpp  galois_sock.cpp  galois_zmq_driver.cpp
examples/simple/modules/: galois_lfsr.hpp
examples/unit/: CMakeLists.txt  Makefile  prototype.cpp
examples/unit/blackboxes/: fib_lfsr_ports.hpp  fib_ports.hpp  fib_sock.cpp  fib_sock_driver.cpp  fib_zmq.cpp  fib_zmq_driver.cpp  galois_lfsr_ports.hpp  galois_ports.hpp  galois_sock.cpp  galois_sock_driver.cpp  galois_zmq.cpp  galois_zmq_driver.cpp
examples/unit/demo/: socks.py  zmq.py
src/sit/cpp/: CMakeLists.txt
tests/: CMakeLists.txt  Makefile  generate_g.py  read_mem.py  test_params.py  unit.cpp
tests/boilerplate/: generate_g.py
tests/chisel/: CMakeLists.txt  generate_bbox.py  ram_comp.cpp
tests/chisel/sock/: CMakeLists.txt  build.sbt  ram.scala  run.py
tests/proto/: CMakeLists.txt  Makefile  bay.cpp  carWash.cpp  carWash.hpp  car_generator.cpp  car_wash.cpp  car_wash.hpp  prototype.cpp  test-prototype.cpp
tests/proto/blackboxes/: fib_sock.cpp  fib_sock_driver.cpp  fib_zmq.cpp  fib_zmq_driver.cpp  galois_sock.cpp  galois_sock_driver.cpp  galois_zmq.cpp  galois_zmq_driver.cpp  stoplight_sock_driver.cpp
tests/proto/carWash/: Makefile
tests/proto/car_wash/: bay.cpp  car_wash.hpp
tests/proto/demo/: socks.py  zmq.py
tests/proto/intersection/: carGenerator.cc
tests/proto/modules/: fib_lfsr.hpp  galois_lfsr.hpp  stoplight.hpp
tests/proto/tests/: carWash.py  car_wash.py
tests/pyrtl/: CMakeLists.txt  Makefile  generate_bbox.py  generate_boilerplate.py  ram.py  requirements.txt  traffic_light.cpp
tests/pyrtl/common/: params.py  ram.py
tests/pyrtl/sock/: bbox.py  (+4 more)
tests/sim/: Makefile
tests/systemc/: CMakeLists.txt  CMakeLists.txt.in  Makefile  bbox.py  generate_bbox.py  generate_boilerplate.py  main.cpp  params.py  ram.hpp  run.py  unit.cpp
tests/testcases/: test_params.py  unit.cpp
tests/verilog/: CMakeLists.txt  Makefile  Makefile.config  generate_bbox.py  generate_boilerplate.py  ram.v
(+1201 files in other folders)
