[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "sst_it"
version = "1.0.0"
authors = [{ name="ribbas", email="ahmed_sabbir@bah.com" }]
description = "SST Interoperability Toolkit"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.6"
dependencies = [
    "cocotb",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/lpsmodsim/SIT"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sit = ["template/*/*", "libsit/*.hpp"]
